few more api defination added but implementation of these APIs are not provided
